--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     expedita illum soluta quibusdam dolorum a similique, libero accusamus temporibus dignissimos aut. Blanditiis, eos
     voluptatum. Architecto, est reiciendis voluptatum esse ut nobis veritatis mollitia aliquam recusandae tempora
     laboriosam corrupti<br>
-    Hacker sanket
+    <br>
+    <h1> sanket</h1>
 </body>
 
 </html>
