--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     laboriosam corrupti<br>
     <br>
     <h1> sanket</h1>
-    <button>click</button>
+    <button href="https://amolhatagale.github.io/">click</button>
 </body>
 
 </html>
